# python_web_hw13_2_Django

./: README.md  pyproject.toml
mysite/: .example.env  delete_table_db.py
mysite/app_mysite/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/app_mysite/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_alter_quote_tags.py  0004_alter_author_born_date.py  0005_alter_quote_tags.py  0006_alter_quote_tags.py  0007_alter_quote_tags.py  0008_alter_quote_tags.py  0009_alter_quote_tags.py  0010_alter_quote_tags.py  0011_alter_quote_quote.py  0012_alter_quote_quote.py  0013_alter_quote_quote.py  0014_alter_quote_quote.py  0015_alter_quote_tags.py  0016_alter_quote_tags.py  0017_alter_quote_tags.py  0018_alter_author_description.py  0019_alter_author_born_location.py  0020_alter_quote_tags.py  0021_alter_quote_tags.py  0022_alter_quote_tags.py  0023_alter_quote_tags.py  0024_author_user.py  0025_alter_author_description.py  0026_alter_author_fullname.py  0027_rename_user_author_user_id.py  0028_remove_author_user_id.py  0029_author_user_id.py  0030_remove_author_user_id.py  0031_author_user_id.py  0032_rename_user_id_author_user.py  0033_remove_author_user.py  0034_author_user.py  0035_remove_author_user.py  0036_author_user.py  0037_alter_author_id_alter_quote_id.py  0038_rename_author_quote_author_id.py  0039_rename_author_id_quote_author.py  0040_remove_author_user.py  (+21 more)
mysite/app_mysite/templates/app_mysite/: add_author.html  add_quote.html  authors.html  (+4 more)
mysite/mysite/: settings.py  urls.py
mysite/users/: forms.py  urls.py  views.py
(+7 files in other folders)
